fix body overflow hidden

--- a/src/index.sass
+++ b/src/index.sass
@@ -20,7 +20,7 @@ body
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
 	transition: background-color 0.5s ease, color 0.3s ease
-	overflow: hidden
+	overflow-x: hidden
 
 	&.dark
 		background-color: $primary-dark-100
